--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,7 +21,7 @@
         <div style="border-color: #F1F2F6;" class="pt-5 lg:flex xl:flex mx-auto justify-between">
             <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
                 <div onclick="window.location='../index.html'" >
-                    <img class="h-30 w-40" src="/assets/images/logo.png" />
+                    <img class="h-30 w-40" src="../assets/images/logo.png" />
                 </div>
                 <div id="mainNav" class="hidden lg:flex xl:flex">
                 <ul class="lg:flex xl:flex items-center">
