--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -22,7 +22,7 @@
             <div style="border-color: #F1F2F6;" class="pt-5 w-5/6 lg:flex xl:flex container mx-auto justify-between">
                 <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
                     <div onclick="window.location='../index.html'">
-                        <img class="h-30 w-50" src="/assets/images/logo.png" />
+                        <img class="h-30 w-50" src="../assets/images/logo.png" />
                     </div>
                     <div id="mainNav" class="hidden lg:flex xl:flex">
                     <ul class="lg:flex xl:flex items-center">
