--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="pt-5 lg:flex xl:flex container mx-auto justify-between">
           <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
               <div onclick="window.location='index.html'">
-                  <img class="h-30 w-40" src="assets/images/logo.png" />
+                  <img class="h-30 w-40" src="./assets/images/logo.png" />
               </div>
               <div id="mainNav" class="hidden lg:flex xl:flex">
                 <ul class="lg:flex xl:flex items-center">
@@ -162,19 +162,19 @@
       </div>
         <div style="background-color:#F1F2F6;max-width: 500px;" class="cardLeft mx-auto lg:mt-0 xl:mt-0 mt-5 lg:mx-0 xl:mx-0 cardContainer p-10 md:flex lg:flex xl:flex items-center rounded-lg shadow-2xl">  
           <div class="w-4/6 md:w-2/6 lg:w-2/6 xl:w-2/6 mx-auto">
-            <img src="/assets/images/Ellipse 48.png" class="h-5/6 w-5/6 mx-auto">
+            <img src="./assets/images/Ellipse 48.png" class="h-5/6 w-5/6 mx-auto">
             <p style="color: #4D4847; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl mt-5 text-center">Jhon Doe</p>
             <p style="color: #4D4847; " class="text-sm md:text-lg lg:text-lg lg:text-lg mt-1 text-center">CEO at AroTech</p>
-            <img src="/assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
+            <img src="./assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
           </div>
           <p class="md:w-3/6 lg:w-3/6 xl:w-3/6 w-5/6 md:mt-0 lg:mt-0 xl:mt-0 mt-5 mx-auto md:ml-10 lg:ml-10 xl:ml-10 text-center md:text-left lg:text-left xl:text-left text-xs md:text-sm lg:text-sm xl:text-sm leading-8" style="color: #4D4847;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
         </div>
         <div style="background-color:#F1F2F6;max-width: 500px;" class="mx-auto lg:mt-0 xl:mt-0 mt-5 lg:mx-0 xl:mx-0 cardContainer p-10 md:flex lg:flex xl:flex items-center rounded-lg shadow-2xl">  
           <div class="w-4/6 md:w-2/6 lg:w-2/6 xl:w-2/6 mx-auto">
-            <img src="/assets/images/Ellipse 49.png" class="h-5/6 w-5/6 mx-auto">
+            <img src="./assets/images/Ellipse 49.png" class="h-5/6 w-5/6 mx-auto">
             <p style="color: #4D4847; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl mt-5 text-center">Jane Doe</p>
             <p style="color: #4D4847; " class="text-sm md:text-lg lg:text-lg lg:text-lg mt-1 text-center">CEO at BitTech</p>
-            <img src="/assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
+            <img src="./assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
           </div>
           <p class="md:w-3/6 lg:w-3/6 xl:w-3/6 w-5/6 md:mt-0 lg:mt-0 xl:mt-0 mt-5 mx-auto md:ml-10 lg:ml-10 xl:ml-10 text-center md:text-left lg:text-left xl:text-left text-xs md:text-sm lg:text-sm xl:text-sm leading-8" style="color: #4D4847;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
         </div>
@@ -185,13 +185,13 @@
             <p class=" text-3xl xl:text-5xl text-white">70+</p>
             <p class="text-xl xl:text-3xl text-white mt-5">Engineers & Developers</p>
           </div>
-          <img src="/assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
+          <img src="./assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
   
           <div class="text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0">
             <p class=" text-3xl xl:text-5xl text-white">50+</p>
             <p class="text-xl xl:text-3xl text-white mt-5">Client's Recommendation</p>
           </div>
-          <img src="/assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
+          <img src="./assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
   
           <div class="text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0">
             <p class=" text-3xl xl:text-5xl text-white">6+</p>
@@ -281,16 +281,16 @@
         <div class="w-5/6 mt-5  md:mx-0 lg:mx-0 xl:mx-0 md:mt-0 lg:mt-0 xl:mt-0 md:w-1/6 lg:w-1/6 xl:w-1/6">
           <p style="border-color: rgba(255, 255, 255, 0.2);" class="text-xl text-white border-b-2 pb-2">Social</p>
           <ul class="text-white mt-2 flex">
-            <img src="/assets/images/linkedin.png" class="ml-2" >
-            <img src="/assets/images/facebook.png" class="ml-2" >
-            <img src="/assets/images/twitter.png" class="ml-2" >
-            <img src="/assets/images/google-plus.png" class="ml-2" >
+            <img src="./assets/images/linkedin.png" class="ml-2" >
+            <img src="./assets/images/facebook.png" class="ml-2" >
+            <img src="./assets/images/twitter.png" class="ml-2" >
+            <img src="./assets/images/google-plus.png" class="ml-2" >
           </ul>
         </div>
 
       </div>
       <div style="border-color: rgba(255, 255, 255, 0.2);" class="container md:flex lg:flex xl:flex items-center justify-between border-t-2 pt-5 w-5/6 mx-auto">
-        <img src="assets/images/logo-footer.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
+        <img src="./assets/images/logo-footer.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
         <p class="text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-white">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </div>  
