--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -43,7 +43,7 @@
                 
                 </div>
                 <div class="hidden lg:flex xl:flex items-center">
-                    <img class="h-5 w-5" src="/assets/images/phone-call.png">
+                    <img class="h-5 w-5" src="../assets/images/phone-call.png">
                     <p style="color: #0E142B;" class="text-sm ml-2">+92 042 35929454</p>
                     <button onclick="window.location='./contact-us.html'" style="background-color: #0E142B;" class="rounded-full ml-5 shadow-lg py-2 px-8 text-white text-xs ml-2 uppercase">Consult</button>
                 </div>
@@ -151,16 +151,16 @@
         <div class="w-5/6 mt-5  md:mx-0 lg:mx-0 xl:mx-0 md:mt-0 lg:mt-0 xl:mt-0 md:w-1/6 lg:w-1/6 xl:w-1/6">
           <p style="border-color: #0E142B;" class="text-xl text-linkBlue border-b pb-2">Social</p>
           <ul class="text-white mt-2 flex">
-            <img src="/assets/images/linkedin-6.png" class="ml-2" >
-            <img src="/assets/images/facebook-3.png" class="ml-2" >
-            <img src="/assets/images/twitter-6.png" class="ml-2" >
-            <img src="/assets/images/google-plus-3.png" class="ml-2" >
+            <img src="../assets/images/linkedin-6.png" class="ml-2" >
+            <img src="../assets/images/facebook-3.png" class="ml-2" >
+            <img src="../assets/images/twitter-6.png" class="ml-2" >
+            <img src="../assets/images/google-plus-3.png" class="ml-2" >
           </ul>
         </div>
 
       </div>
       <div style="border-color: #0E142B;" class="container md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="/assets/images/logo.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
         <p class="text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </div>
