--- a/pages/proposal_request.html
+++ b/pages/proposal_request.html
@@ -186,10 +186,10 @@
             <div class="w-5/6 mt-5  md:mx-0 lg:mx-0 xl:mx-0 md:mt-0 lg:mt-0 xl:mt-0 md:w-1/6 lg:w-1/6 xl:w-1/6">
             <p style="border-color: rgba(255, 255, 255, 0.2);" class="text-xl text-white border-b-2 pb-2">Social</p>
             <ul class="text-white mt-2 flex">
-                <img src="/assets/images/linkedin.png" class="ml-2" >
-                <img src="/assets/images/facebook.png" class="ml-2" >
-                <img src="/assets/images/twitter.png" class="ml-2" >
-                <img src="/assets/images/google-plus.png" class="ml-2" >
+                <img src="../assets/images/linkedin.png" class="ml-2" >
+                <img src="../assets/images/facebook.png" class="ml-2" >
+                <img src="../assets/images/twitter.png" class="ml-2" >
+                <img src="../assets/images/google-plus.png" class="ml-2" >
             </ul>
             </div>
 
