--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -42,7 +42,7 @@
             
             </div>
             <div class="hidden lg:flex xl:flex items-center">
-                <img class="h-5 w-5" src="/assets/images/phone-call.png">
+                <img class="h-5 w-5" src="../assets/images/phone-call.png">
                 <p style="color: #0E142B;" class="text-sm ml-2">+92 042 35929454</p>
                 <button onclick="window.location='./contact-us.html'" style="background-color: #0E142B;" class="rounded-full ml-5 shadow-lg py-2 px-8 text-white text-xs ml-2 uppercase">Consult</button>
             </div>
@@ -102,16 +102,16 @@
             <img src="/assets/images/Ellipse 48.png" class="h-5/6 w-5/6 mx-auto">
             <p style="color: #4D4847; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl mt-5 text-center">Jhon Doe</p>
             <p style="color: #4D4847; " class="text-sm md:text-lg lg:text-lg lg:text-lg mt-1 text-center">CEO at AroTech</p>
-            <img src="/assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
+            <img src="../assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
           </div>
           <p class="md:w-3/6 lg:w-3/6 xl:w-3/6 w-5/6 md:mt-0 lg:mt-0 xl:mt-0 mt-5 mx-auto md:ml-10 lg:ml-10 xl:ml-10 text-center md:text-left lg:text-left xl:text-left text-xs md:text-sm lg:text-sm xl:text-sm leading-8" style="color: #4D4847;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
         </div>
         <div style="background-color:#F1F2F6;max-width: 500px;" class="mx-auto lg:mt-0 xl:mt-0 mt-5 lg:mx-0 xl:mx-0 cardContainer p-10 md:flex lg:flex xl:flex items-center rounded-lg shadow-2xl">  
           <div class="w-4/6 md:w-2/6 lg:w-2/6 xl:w-2/6 mx-auto">
-            <img src="/assets/images/Ellipse 49.png" class="h-5/6 w-5/6 mx-auto">
+            <img src="../assets/images/Ellipse 49.png" class="h-5/6 w-5/6 mx-auto">
             <p style="color: #4D4847; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl mt-5 text-center">Jane Doe</p>
             <p style="color: #4D4847; " class="text-sm md:text-lg lg:text-lg lg:text-lg mt-1 text-center">CEO at BitTech</p>
-            <img src="/assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
+            <img src="../assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
           </div>
           <p class="md:w-3/6 lg:w-3/6 xl:w-3/6 w-5/6 md:mt-0 lg:mt-0 xl:mt-0 mt-5 mx-auto md:ml-10 lg:ml-10 xl:ml-10 text-center md:text-left lg:text-left xl:text-left text-xs md:text-sm lg:text-sm xl:text-sm leading-8" style="color: #4D4847;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
         </div>
@@ -183,15 +183,15 @@
         <div class="w-5/6 mt-5  md:mx-0 lg:mx-0 xl:mx-0 md:mt-0 lg:mt-0 xl:mt-0 md:w-1/6 lg:w-1/6 xl:w-1/6">
           <p style="border-color: #0E142B;" class="text-lg md:text-xl text-linkBlue border-b pb-2">Social</p>
           <ul class="text-white mt-2 flex">
-            <img src="/assets/images/linkedin-6.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/facebook-3.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/twitter-6.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/google-plus-3.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/linkedin-6.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/facebook-3.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/twitter-6.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/google-plus-3.png" class="ml-2 md:h-auto h-5" >
           </ul>
         </div>
       </div>
       <div style="border-color: #0E142B;" class="container md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="/assets/images/logo.png" class="mx-auto md:mx-0 h-10 md:h-auto lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 h-10 md:h-auto lg:mx-0 xl:mx-0">
         <p class="text-xs md:text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </div>
