--- a/pages/careers.html
+++ b/pages/careers.html
@@ -343,15 +343,15 @@
         <div class="w-5/6 mt-5  md:mx-0 lg:mx-0 xl:mx-0 md:mt-0 lg:mt-0 xl:mt-0 md:w-1/6 lg:w-1/6 xl:w-1/6">
           <p style="border-color: #0E142B;" class="text-lg md:text-xl text-linkBlue border-b pb-2">Social</p>
           <ul class="text-white mt-2 flex">
-            <img src="/assets/images/linkedin-6.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/facebook-3.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/twitter-6.png" class="ml-2 md:h-auto h-5" >
-            <img src="/assets/images/google-plus-3.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/linkedin-6.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/facebook-3.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/twitter-6.png" class="ml-2 md:h-auto h-5" >
+            <img src="../assets/images/google-plus-3.png" class="ml-2 md:h-auto h-5" >
           </ul>
         </div>
       </div>
       <div style="border-color: #0E142B;" class="container md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="/assets/images/logo.png" class="mx-auto md:mx-0 h-10 md:h-auto lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 h-10 md:h-auto lg:mx-0 xl:mx-0">
         <p class="text-xs md:text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </body>
