--- a/index.html
+++ b/index.html
@@ -208,28 +208,28 @@
       <div class="w-full md:w-3/6 lg:w-3/6 xl:w-3/6">
         <!-- contact left data row -->
         <div class="flex mt-10">
-          <img src="/assets/images/mail.png" class="h-10 w-10">
+          <img src="./assets/images/mail.png" class="h-10 w-10">
           <div class="ml-8 md:w-2/6 lg:w-2/6 xl:w-2/6">
             <p style="color:#034078; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl"> Email Us</p>
             <p style="color:#4D4847" class="mt-5 text-xs md:text-sm lg:text-lg xl:text-lg"> contact@kryptomind.com</p>
           </div>
         </div>
         <div class="flex mt-10">
-          <img src="/assets/images/career.png" class="h-10 w-11">
+          <img src="./assets/images/career.png" class="h-10 w-11">
           <div class="ml-8 md:w-2/6 lg:w-2/6 xl:w-2/6">
             <p style="color:#034078; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl"> Work for Us</p>
             <p style="color:#4D4847" class="mt-5 text-xs md:text-sm lg:text-lg xl:text-lg"> hr@kryptomind.com</p>
           </div>
         </div>
         <div class="flex mt-10">
-          <img src="/assets/images/phone.png" class="h-10 w-10">
+          <img src="./assets/images/phone.png" class="h-10 w-10">
           <div class="ml-8 md:w-2/6 lg:w-2/6 xl:w-2/6">
             <p style="color:#034078; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl"> Call Us</p>
             <p style="color:#4D4847" class="mt-5 text-xs md:text-sm lg:text-lg xl:text-lg"> +92 042 35929454</p>
           </div>
         </div>
         <div class="flex mt-10">
-          <img src="/assets/images/pin.png" class="h-10 w-10">
+          <img src="./assets/images/pin.png" class="h-10 w-10">
           <div class="ml-8 md:w-2/6 lg:w-2/6 xl:w-2/6">
             <p style="color:#034078; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl"> Locate Us</p>
             <p style="color:#4D4847" class="mt-5 text-xs md:text-sm lg:text-lg xl:text-lg"> Block K Model Town, Lahore, Punjab, Pakistan.</p>
