--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -99,7 +99,7 @@
       </div>
         <div style="background-color:#F1F2F6;max-width: 500px;" class="cardLeft mx-auto lg:mt-0 xl:mt-0 mt-5 lg:mx-0 xl:mx-0 cardContainer p-10 md:flex lg:flex xl:flex items-center rounded-lg shadow-2xl">  
           <div class="w-4/6 md:w-2/6 lg:w-2/6 xl:w-2/6 mx-auto">
-            <img src="/assets/images/Ellipse 48.png" class="h-5/6 w-5/6 mx-auto">
+            <img src="../assets/images/Ellipse 48.png" class="h-5/6 w-5/6 mx-auto">
             <p style="color: #4D4847; font-family: 'Montserrat-Medium';" class="text-lg md:text-2xl lg:text-2xl xl:text-2xl mt-5 text-center">Jhon Doe</p>
             <p style="color: #4D4847; " class="text-sm md:text-lg lg:text-lg lg:text-lg mt-1 text-center">CEO at AroTech</p>
             <img src="../assets/images/quote-1.png" class="mx-auto mt-5 h-2/6 w-2/6"/>
