index and about us path fixes

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -122,13 +122,13 @@
             <p class=" text-3xl xl:text-5xl text-white">70+</p>
             <p class="text-xl xl:text-3xl text-white mt-5">Engineers & Developers</p>
           </div>
-          <img src="/assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
+          <img src="../assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
   
           <div class="text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0">
             <p class=" text-3xl xl:text-5xl text-white">50+</p>
             <p class="text-xl xl:text-3xl text-white mt-5">Client's Recommendation</p>
           </div>
-          <img src="/assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
+          <img src="../assets/images/Group 307.png" class="dotBorder h-10 xl:h-20 mt-8 xl:mt-10">
   
           <div class="text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0">
             <p class=" text-3xl xl:text-5xl text-white">6+</p>
