index page header fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="featured"  style=" background-image: url('./assets/images/Group 694.png'); background-repeat: no-repeat; background-position: top; background-size: cover;">
       <!-- Navbar Starts Here! -->
-      <div class="pt-5 lg:flex xl:flex container mx-auto justify-between">
+      <div class="pt-5 lg:flex xl:flex w-5/6 container mx-auto justify-between">
           <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
               <div onclick="window.location='index.html'">
                   <img class="h-30 w-40" src=".\assets/images/logo.png" />
