--- a/pages/ourwork.html
+++ b/pages/ourwork.html
@@ -124,7 +124,7 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Taskly</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/imac.png" class="h-4 w-4">
+                                <img src="../assets/images/imac.png" class="h-4 w-4">
                                 <!-- <img src="/assets/images/company.png" class="h-5 w-4"> -->
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Nike Sportswear Icon Clash</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/internet.png" class="h-4 w-4">
+                                <img src="../assets/images/internet.png" class="h-4 w-4">
                                 <!-- <img src="/assets/images/company.png" class="h-5 w-4"> -->
                             </div>
                         </div>
@@ -166,8 +166,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Kashee</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -193,8 +193,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Inbox Guard</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -213,8 +213,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Taskly</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Nike Sportswear Icon Clash</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/internet.png" class="h-4 w-4">
+                                <img src="../assets/images/internet.png" class="h-4 w-4">
                                 <!-- <img src="/assets/images/company.png" class="h-5 w-4"> -->
                             </div>
                         </div>
@@ -255,8 +255,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Workout Mate</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
 
       </div>
       <div style="border-color: #0E142B;" class="md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="h-40 mx-auto md:mx-0 lg:mx-0 xl:mx-0">
         <p class="text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
 
