our work missing platfor icons fix

--- a/pages/ourwork.html
+++ b/pages/ourwork.html
@@ -104,8 +104,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Union Bank</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -282,8 +282,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Union Bank</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Taskly</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/imac.png" class="h-4 w-4">
+                                <img src="../assets/images/imac.png" class="h-4 w-4">
                                 <!-- <img src="/assets/images/company.png" class="h-5 w-4"> -->
                             </div>
                         </div>
@@ -324,7 +324,7 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Nike Sportswear Icon Clash</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/internet.png" class="h-4 w-4">
+                                <img src="../assets/images/internet.png" class="h-4 w-4">
                                 <!-- <img src="/assets/images/company.png" class="h-5 w-4"> -->
                             </div>
                         </div>
@@ -344,8 +344,8 @@
                         <div class="flex px-5 justify-between">
                             <p style="color: rgba(77,72,71,0.8); font-family: 'Montserrat-Medium';" class="text-base my-4 text-center">Kashee</p>
                             <div class="flex items-center">
-                                <img src="/assets/images/android.png" class="h-6 w-4 mr-2">
-                                <img src="/assets/images/company.png" class="h-5 w-4">
+                                <img src="../assets/images/android.png" class="h-6 w-4 mr-2">
+                                <img src="../assets/images/company.png" class="h-5 w-4">
                             </div>
                         </div>
                     </div>
