--- a/pages/services.html
+++ b/pages/services.html
@@ -18,7 +18,7 @@
     <body class="">
         <header class="bg-primary">
             <!-- Navbar Starts Here! -->
-            <div class="pt-5 lg:flex xl:flex container mx-auto justify-between">
+            <div class="pt-5 lg:flex xl:flex w-5/6 container mx-auto justify-between">
                 <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
                     <div onclick="window.location='../index.html'">
                         <img class="h-30 w-40" src="../assets/images/logo.png" />
@@ -258,7 +258,7 @@
 
       </div>
       <div style="border-color: #0E142B;" class="container md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="h-40 mx-auto md:mx-0 lg:mx-0 xl:mx-0">
         <p class="text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </body>
