index phone call image refix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="pt-5 lg:flex xl:flex w-5/6 container mx-auto justify-between">
           <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
               <div onclick="window.location='index.html'">
-                  <img class="h-30 w-40" src=".\assets/images/logo.png" />
+                  <img class="h-30 w-40" src="./assets/images/logo.png" />
               </div>
               <div id="mainNav" class="hidden lg:flex xl:flex">
                 <ul class="lg:flex xl:flex items-center">
