index mobile header fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p class="text-sm text-white ml-2">+92 042 35929454</p>
               <button style="background-color: #0E142B;" class="rounded-full ml-5 shadow-lg py-2 px-8 text-white text-xs ml-2 uppercase">Consult</button>
           </div>
-          <div id="navBar" style="background-color: #0E80A1;" class="p-2 w-full absolute hidden lg:hidden xl:hidden mt-5">
+          <div id="navBar" style="background-color: #0E80A1;" class="p-2 w-5/6 mx-auto absolute hidden lg:hidden xl:hidden mt-5">
             <ul class="lg:flex xl:flex items-center">
                 <li class="text-white text-sm py-2"><a href="./pages/services.html">Services</a></li>
                 <li class="text-white text-sm py-2"><a href="./pages/ourwork.html">Portfolio</a></li>
