Request a proposal link missing fixed

--- a/pages/ourwork.html
+++ b/pages/ourwork.html
@@ -373,7 +373,7 @@
                 magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd 
                 gubergren.
             </p>
-            <button class="block mx-auto py-3 px-10 focus:outline-none text-white text-xs shadow-xl md:text-base lg:text-base xl:text-base mt-10 rounded-full" style="background-color: #F19212; font-family: 'Montserrat-Bold';">Request a Proposal</button>
+            <button onclick="window.location='./proposal_request.html'" class="block mx-auto py-3 px-10 focus:outline-none text-white text-xs shadow-xl md:text-base lg:text-base xl:text-base mt-10 rounded-full" style="background-color: #F19212; font-family: 'Montserrat-Bold';">Request a Proposal</button>
         </div>
     </div>
 
