services page footer too big fixed

--- a/pages/services.html
+++ b/pages/services.html
@@ -258,7 +258,7 @@
 
       </div>
       <div style="border-color: #0E142B;" class="container md:flex lg:flex xl:flex items-center justify-between border-t mb-5 pt-5 w-5/6 mx-auto">
-        <img src="../assets/images/logo.png" class="h-40 mx-auto md:mx-0 lg:mx-0 xl:mx-0">
+        <img src="../assets/images/logo.png" class="mx-auto md:mx-0 lg:mx-0 xl:mx-0">
         <p class="text-sm md:text-left lg:text-left xl:text-left text-center mt-5 md:mt-0 lg:mt-0 xl:mt-0 md:text-lg lg:text-lg xl:text-lg text-linkBlue">© 2020 KryptoMind. All Rights Are Reserved</p>
       </div>
     </body>
