--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
           </div>
            <div class="hidden lg:flex xl:flex items-center">
-              <img class="h-5 w-5" src="/assets/images/phone-call.png">
+              <img class="h-5 w-5" src="./assets/images/phone-call.png">
               <p class="text-sm text-white ml-2">+92 042 35929454</p>
               <button style="background-color: #0E142B;" class="rounded-full ml-5 shadow-lg py-2 px-8 text-white text-xs ml-2 uppercase">Consult</button>
           </div>
