--- a/snippets.html
+++ b/snippets.html
@@ -143,3 +143,54 @@
     </ul>
   </div>
 </div>
+<!-- Index Header V1 -->
+<header class="featured"  style=" background-image: url('./assets/images/Group 694.png'); background-repeat: no-repeat; background-position: top; background-size: cover;">
+  <!-- Navbar Starts Here! -->
+  <div class="pt-5 lg:flex xl:flex w-5/6 container mx-auto justify-between">
+      <div class=" items-center flex justify-between lg:justify-start xl:justify-start">
+          <div onclick="window.location='index.html'">
+              <img class="h-30 w-40" src="./assets/images/logo.png" />
+          </div>
+          <div id="mainNav" class="hidden lg:flex xl:flex">
+            <ul class="lg:flex xl:flex items-center">
+                <li class="lg:ml-10 xl:ml-10 text-white mr-5 ml-5 text-sm"><a href="./pages/services.html">Services</a></li>
+                <li class="text-white mr-5 ml-5 text-sm"><a href="./pages/ourwork.html">Portfolio</a></li>
+                <li class="text-white mr-5 ml-5 text-sm"><a href="./pages/careers.html">Careers</a></li>
+                <li class="text-white mr-5 ml-5 text-sm"><a href="./pages/about-us.html">About Us</a></li>
+            </ul>
+          </div>
+          <div>
+            <button id="hamburger" class="lg:hidden xl:hidden" onclick="toggleHeader()">
+                <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+                    <path  style="color: white;" fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"/>
+                </svg>
+            </button>
+        </div>
+
+        
+      </div>
+       <div class="hidden lg:flex xl:flex items-center">
+          <img class="h-5 w-5" src="./assets/images/phone-call.png">
+          <p class="text-sm text-white ml-2">+92 042 35929454</p>
+          <button style="background-color: #0E142B;" class="buttonHover rounded-full ml-5 shadow-lg py-2 px-8 text-white text-xs ml-2 uppercase">Consult</button>
+      </div>
+      <div id="navBar" style="background-color: rgba(14, 128, 161,0.8);;" class="p-2 w-5/6 mx-auto absolute hidden lg:hidden xl:hidden mt-5">
+        <ul class="lg:flex xl:flex items-center">
+            <li class="text-white text-sm py-2"><a href="./pages/services.html">Services</a></li>
+            <li class="text-white text-sm py-2"><a href="./pages/ourwork.html">Portfolio</a></li>
+            <li class="text-white text-sm py-2"><a href="./pages/careers.html">Careers</a></li>
+            <li class="text-white text-sm py-2"><a href="./pages/about-us.html">About Us</a></li>
+        </ul>
+      </div>
+  </div>
+<!-- Navbar Ends Here & Main Page Featured Area Starts here! -->
+  <div  style="background-image: url('./assets/images/Group 132.png'); background-size: 110vh 58vh; background-position: right; background-repeat: no-repeat; min-height: 60vh;" class="container mx-auto max-w-screen-xl max-h-3/6" >
+    <div class="w-5/6 mx-auto  xl:w-full pt-10 md:pt-10 lg:pt-10 xl:pt-10 py-2">
+      <div class="heroPara md:py-0 lg:py-0 xl:py-0 text-center md:text-center lg:text-left xl:text-left md:pt-10 lg:pt-20 xl:pt-20 md:mx-auto lg:mx-0 md:w-5/6 lg:w-5/6 xl:w-5/6">
+        <p class="md:ml-0 md:mr-0 lg:ml-0 lg:mr-0 xl:ml-0 xl:mr-0 mr-5 ml-5 text-white text-2xl md:text-4xl lg:text-4xl xl:text-4xl ">We Are Defining The Futures Edge.</p>
+        <p class="md:ml-0 md:mr-0 lg:ml-0 lg:mr-0 xl:ml-0 xl:mr-0 mr-5 ml-5 mt-5 text-xs md:text-base lg:text-base xl:text-base text-white-80">lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+        <button class="rounded-full text-xs text-white md:text-sm lg:text-sm xl:text-sm font-bold focus:outline-none uppercase font-bold py-2 px-5 mt-5" style="background-color: #F19212;">get in touch</button>
+      </div>
+    </div>
+  </div>
+</header>
