--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Chat Box Body -->
       <div  class="pb-4" style="background-color: #F1F2F6;">
           <div class="absolute bg-white rounded-lg flex ml-2 shadow-md">
-            <img  style="margin-top:-1.2rem; height: 4.5rem;" src="./assets/images/chatLogo.png" class="bg-white p-2 rounded-lg"/>
+            <img  style="margin-top:-1.2rem; height: 4.5rem;" src="./assets/images/ChatLogo.png" class="bg-white p-2 rounded-lg"/>
           </div>
           <div class="w-full border-b pb-4 bg-white shadow-sm">
             <div class="w-5/6 mx-auto">
