--- a/pages/careers.html
+++ b/pages/careers.html
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                     <div class="w-full flex justify-around">
-                        <button class="rounded-full Bold shadow-lg bg-orange py-2 px-8 text-xs md:text-sm focus:outline-none">
+                        <button  onclick="window.location= './submit_resume.html'" class="rounded-full Bold shadow-lg bg-orange py-2 px-8 text-xs md:text-sm focus:outline-none">
                             Submit Your Resume
                         </button>
                     </div>
@@ -155,7 +155,7 @@
                                 <p class="text-gray font-bold text-xs md:text-sm">Lahore, Pakistan . Design</p>
                             </div>
                         </div>
-                        <button class="mr-0 md:mr-2 lg:mr-2 xl:mr-2 rounded-full bg-black text-white py-1 px-6 text-xs font-bold focus:outline-none">
+                        <button onclick="window.location='./post.html' " class="mr-0 md:mr-2 lg:mr-2 xl:mr-2 rounded-full bg-black text-white py-1 px-6 text-xs font-bold focus:outline-none">
                             Apply
                         </button>
                     </div>
@@ -164,12 +164,12 @@
                             <div class="flex justify-around w-10">
                                 <img class="w-6 h-6" src="../assets/images/product.png" />
                             </div>
-                            <div class="ml-1">
+                            <div onclick="window.location='./post.html' " class="ml-1">
                                 <p class="text-blue text-sm md:text-lg font-bold">Project Manager</p>
                                 <p class="text-gray font-bold text-xs md:text-sm">Lahore, Pakistan . Management</p>
                             </div>
                         </div>
-                        <button class="mr-0 md:mr-2 lg:mr-2 xl:mr-2 rounded-full bg-black text-white py-1 px-6 text-xs font-bold focus:outline-none">
+                        <button onclick="window.location='./post.html' " class="mr-0 md:mr-2 lg:mr-2 xl:mr-2 rounded-full bg-black text-white py-1 px-6 text-xs font-bold focus:outline-none">
                             Apply
                         </button>
                     </div>
