Close button not closing on second slider fixed

--- a/pages/ourwork.html
+++ b/pages/ourwork.html
@@ -16,7 +16,7 @@
         id="detailModal" class="fixed top-0 mt-5 bottom-0 left-0 right-0 w-full h-screen">
         <div style="width: 500px; border-top-left-radius: 1rem; border-top-right-radius: 1rem;" class="carousel relative shadow-2xl bg-white mx-auto">
             <div class="carousel-inner relative overflow-hidden ">
-                <button onclick="closeDetailModal()" style="color: #4D4847;" class="focus:outline-none text-xl absolute right-0 mr-5 mt-5">X</button>
+                <button onclick="closeDetailModal()" style="color: #4D4847; z-index: 2;" class="focus:outline-none text-xl absolute right-0 mr-5 mt-5">X</button>
                 <!--Slide 1-->
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden=""
                     checked="checked">
